test/compile_errors/stage1/obj/implicit_semicolon-for_statement.zig
export fn entry() void {
    for(foo()) |_| {}
    var good = {};
    for(foo()) |_| ({})
    var bad = {};
}

// implicit semicolon - for statement
//
// tmp.zig:4:24: error: expected ';' or 'else' after statement
